--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: fish_mvp1
-description: "A new Flutter project."
+description: "Aqualens (Fish MVP) - Identify fish species using AI and image recognition."
 publish_to: 'none'
+
 version: 1.0.0+1
 
 environment:
@@ -9,9 +10,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  # Default Cupertino icons
   cupertino_icons: ^1.0.8
-  sqflite: ^2.2.8
-  path_provider: ^2.0.15
+
+  # Image Picker (camera + gallery)
+  image_picker: ^1.2.0
+
+  # Local database for user data and history
+  sqflite: ^2.3.3+1
+  path: ^1.9.0
+  path_provider: ^2.1.3
+
+  # Shared Preferences for storing theme & user info
+  shared_preferences: ^2.5.3
+
+  # Smooth transitions and animations between screens
+  animations: ^2.0.11
 
 dev_dependencies:
   flutter_test:
@@ -20,3 +35,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  
